--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "preact": "^10.16.0",
-    "react-router-dom": "^6.15.0"
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.15.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.5.0",
